# Thesis

./: .gitignore  Makefile  README.md  build_commands.txt  pyproject.toml  requirements.txt  run_simulation.py
artifacts/models/: case145_der_only_test.csv  case145_eval_der_unavail.csv
env/: builder.py  constants.py  faults.py  microgrid_env.py  pyvenv.cfg
microgrid_safe_rl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
microgrid_safe_rl/analysis/: trajectory.py  trajectory_analysis.ipynb
microgrid_safe_rl/augmentation/: __init__.py  case118.py  case145.py  case33.py  common.py
microgrid_safe_rl/configs/: env.yaml  env_case118.yaml  env_case145.yaml  env_case33.yaml  test_env_case33.yaml
microgrid_safe_rl/envs/: __init__.py  factory.py  microgrid_control_env.py
microgrid_safe_rl/feeders/: __init__.py  registry.py
microgrid_safe_rl/scripts/: eval.py  eval_per_step.py  evaluate_scenarios.py  inspect_env.py  plot_eval_filtered.py  plot_served.py  plot_served_traj.py  plot_shed_traj.py  run_experiment.py  sanity_case33.py  train.py  train_case118.py  train_case33.py  visualise_case33.py  visualise_env.py
microgrid_safe_rl/tests/: quick_test_case118.py  quick_test_case145.py  quick_test_case33.py
microgrid_safe_rl/utils/: __init__.py  config.py  logging.py  seed.py
results/case33/: scenario_summary_stats_N10.csv
results/case33_der_degradation/: per_step_with_fault.csv  summary_with_fault.csv  trajectory_with_fault.csv
runs/ppo_case145_phaseA/: events.out.tfevents.1758636199.SamsLaptop.159253.0  (+1 more)
(+75 files in other folders)
